Fix schedule detail on mobile

--- a/app/src/components/schedules/ScheduleDetail.module.scss
+++ b/app/src/components/schedules/ScheduleDetail.module.scss
@@ -50,7 +50,7 @@
 
   @media screen and (max-width: $breakpoint-sm) {
     max-width: min(calc(100vw - 16px), pxToRem(880));
-    max-height: calc(100vh - 16px);
+    max-height: min(calc(100vh - 16px), pxToRem(440));
   }
 }
 
